--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -20,6 +20,19 @@
             android:entryValues="@array/button_actions_values"
             android:defaultValue="NOTHING"
             android:dependency="link_background"/>
+    <ListPreference
+            android:key="action_out_of_band_list"
+            android:title="@string/out_of_band_action"
+            android:summary="@string/out_of_band_action_summary"
+            android:entries="@array/button_actions"
+            android:entryValues="@array/button_actions_values"
+            android:defaultValue="NOTHING"
+            android:dependency="link_background"/>
+    <CheckBoxPreference
+            android:key="action_on_power_off"
+            android:title="@string/action_on_power_off"
+            android:summary="@string/action_on_power_off_summary"
+            android:dependency="action_out_of_band_list"/>
     <Preference
             android:title="@string/immediate_alert"
             android:summary="@string/immediate_alert_summary"
