--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -34,6 +34,11 @@
             android:summary="@string/action_on_power_off_summary"
             android:dependency="action_out_of_band_list"/>
     <Preference
+            android:title="@string/ring_tone"
+            android:summary="@string/ring_tone_summary"
+            android:key="ring_tone"
+            android:dependency="link_background"/>
+    <Preference
             android:title="@string/immediate_alert"
             android:summary="@string/immediate_alert_summary"
             android:enabled="false"
