--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -4,40 +4,42 @@
             android:key="link_background"
             android:title="@string/link_background"
             android:summary="@string/link_background_summary"/>
-    <ListPreference
-            android:key="action_simple_button_list"
-            android:title="@string/simple_button_action"
-            android:summary="@string/simple_button_action_summary"
-            android:entries="@array/button_actions"
-            android:entryValues="@array/button_actions_values"
-            android:defaultValue="NOTHING"
-            android:dependency="link_background"/>
-    <ListPreference
-            android:key="action_double_button_list"
-            android:title="@string/double_button_action"
-            android:summary="@string/double_button_action_summary"
-            android:entries="@array/button_actions"
-            android:entryValues="@array/button_actions_values"
-            android:defaultValue="NOTHING"
-            android:dependency="link_background"/>
-    <ListPreference
-            android:key="action_out_of_band_list"
-            android:title="@string/out_of_band_action"
-            android:summary="@string/out_of_band_action_summary"
-            android:entries="@array/button_actions"
-            android:entryValues="@array/button_actions_values"
-            android:defaultValue="NOTHING"
-            android:dependency="link_background"/>
-    <CheckBoxPreference
-            android:key="action_on_power_off"
-            android:title="@string/action_on_power_off"
-            android:summary="@string/action_on_power_off_summary"
-            android:dependency="action_out_of_band_list"/>
-    <Preference
-            android:title="@string/ring_tone"
-            android:summary="@string/ring_tone_summary"
-            android:key="ring_tone"
-            android:dependency="link_background"/>
+    <PreferenceScreen android:title="@string/actions">
+        <ListPreference
+                android:key="action_simple_button_list"
+                android:title="@string/simple_button_action"
+                android:summary="@string/simple_button_action_summary"
+                android:entries="@array/button_actions"
+                android:entryValues="@array/button_actions_values"
+                android:defaultValue="NOTHING"
+                android:dependency="link_background"/>
+        <ListPreference
+                android:key="action_double_button_list"
+                android:title="@string/double_button_action"
+                android:summary="@string/double_button_action_summary"
+                android:entries="@array/button_actions"
+                android:entryValues="@array/button_actions_values"
+                android:defaultValue="NOTHING"
+                android:dependency="link_background"/>
+        <ListPreference
+                android:key="action_out_of_band_list"
+                android:title="@string/out_of_band_action"
+                android:summary="@string/out_of_band_action_summary"
+                android:entries="@array/button_actions"
+                android:entryValues="@array/button_actions_values"
+                android:defaultValue="NOTHING"
+                android:dependency="link_background"/>
+        <CheckBoxPreference
+                android:key="action_on_power_off"
+                android:title="@string/action_on_power_off"
+                android:summary="@string/action_on_power_off_summary"
+                android:dependency="action_out_of_band_list"/>
+        <Preference
+                android:title="@string/ring_tone"
+                android:summary="@string/ring_tone_summary"
+                android:key="ring_tone"
+                android:dependency="link_background"/>
+    </PreferenceScreen>
     <Preference
             android:title="@string/immediate_alert"
             android:summary="@string/immediate_alert_summary"
@@ -46,6 +48,9 @@
     <Preference
             android:title="@string/battery_info"
             android:key="battery_info"/>
+    <Preference
+            android:title="@string/rssi_info"
+            android:key="rssi_info"/>
     <Preference
             android:title="@string/feedback"
             android:summary="@string/feedback_summary"
