--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -71,4 +71,8 @@
             android:title="@string/donate"
             android:summary="@string/donate_summary"
             android:key="donate"/>
+    <Preference
+            android:title="@string/remove"
+            android:summary="@string/remove_summary"
+            android:key="remove"/>
 </PreferenceScreen>
