move donate and feedback menu

--- a/app/src/main/res/menu/devices.xml
+++ b/app/src/main/res/menu/devices.xml
@@ -3,6 +3,16 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="net.sylvek.itracing2.DevicesActivity">
     <item
+            android:title="@string/feedback"
+            android:icon="@android:drawable/ic_menu_help"
+            android:id="@+id/action_feedback" tools:ignore="AppCompatResource"/>
+
+    <item
+            android:title="@string/donate"
+            android:icon="@android:drawable/ic_menu_more"
+            android:id="@+id/action_donate" tools:ignore="AppCompatResource"/>
+
+    <item
             android:id="@+id/action_scan"
             android:orderInCategory="100"
             android:showAsAction="always"
