--- a/app/src/main/res/xml/device_preferences.xml
+++ b/app/src/main/res/xml/device_preferences.xml
@@ -1,57 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <SwitchPreference
-            android:key="link_background"
-            android:title="@string/link_background"
-            android:summary="@string/link_background_summary"/>
-    <PreferenceScreen android:title="@string/actions" android:dependency="link_background">
-        <ListPreference
-                android:key="action_simple_button_list"
-                android:title="@string/simple_button_action"
-                android:summary="@string/simple_button_action_summary"
-                android:entries="@array/button_actions"
-                android:entryValues="@array/button_actions_values"
-                android:defaultValue="NOTHING"
-                android:dependency="link_background"/>
-        <ListPreference
-                android:key="action_double_button_list"
-                android:title="@string/double_button_action"
-                android:summary="@string/double_button_action_summary"
-                android:entries="@array/button_actions"
-                android:entryValues="@array/button_actions_values"
-                android:defaultValue="NOTHING"
-                android:dependency="link_background"/>
-        <ListPreference
-                android:key="action_out_of_band_list"
-                android:title="@string/out_of_band_action"
-                android:summary="@string/out_of_band_action_summary"
-                android:entries="@array/button_actions"
-                android:entryValues="@array/button_actions_values"
-                android:defaultValue="NOTHING"
-                android:dependency="link_background"/>
-        <CheckBoxPreference
-                android:key="action_on_power_off"
-                android:title="@string/action_on_power_off"
-                android:summary="@string/action_on_power_off_summary"
-                android:dependency="action_out_of_band_list"/>
-        <Preference
-                android:title="@string/ring_tone"
-                android:summary="@string/ring_tone_summary"
-                android:key="ring_tone"
-                android:dependency="link_background"/>
-        <EditTextPreference
-                android:title="@string/double_button_delay"
-                android:summary="@string/double_button_delay_summary"
-                android:inputType="number"
-                android:key="double_button_delay"
-                android:defaultValue="@string/default_double_button_delay"
-                android:dependency="link_background"/>
-        <EditTextPreference
-                android:title="@string/custom_action"
-                android:summary="@string/custom_action_summary"
-                android:key="custom_action"
-                android:dependency="link_background"/>
-    </PreferenceScreen>
+    <ListPreference
+            android:key="action_simple_button_list"
+            android:title="@string/simple_button_action"
+            android:summary="@string/simple_button_action_summary"
+            android:entries="@array/button_actions"
+            android:entryValues="@array/button_actions_values"
+            android:defaultValue="NOTHING"/>
+    <ListPreference
+            android:key="action_double_button_list"
+            android:title="@string/double_button_action"
+            android:summary="@string/double_button_action_summary"
+            android:entries="@array/button_actions"
+            android:entryValues="@array/button_actions_values"
+            android:defaultValue="NOTHING"/>
+    <ListPreference
+            android:key="action_out_of_band_list"
+            android:title="@string/out_of_band_action"
+            android:summary="@string/out_of_band_action_summary"
+            android:entries="@array/button_actions"
+            android:entryValues="@array/button_actions_values"
+            android:defaultValue="NOTHING"/>
+    <CheckBoxPreference
+            android:key="action_on_power_off"
+            android:title="@string/action_on_power_off"
+            android:summary="@string/action_on_power_off_summary"
+            android:dependency="action_out_of_band_list"/>
+    <Preference
+            android:title="@string/ring_tone"
+            android:summary="@string/ring_tone_summary"
+            android:key="ring_tone"/>
+    <EditTextPreference
+            android:title="@string/double_button_delay"
+            android:summary="@string/double_button_delay_summary"
+            android:inputType="number"
+            android:key="double_button_delay"
+            android:defaultValue="@string/default_double_button_delay"/>
+    <EditTextPreference
+            android:title="@string/custom_action"
+            android:summary="@string/custom_action_summary"
+            android:key="custom_action"/>
     <Preference
             android:title="@string/start_immediate_alert"
             android:summary="@string/immediate_alert_summary"
