--- a/app/src/main/res/layout/expandable_list_item_with_options.xml
+++ b/app/src/main/res/layout/expandable_list_item_with_options.xml
@@ -7,11 +7,13 @@
                  android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
                  android:mode="twoLine">
 
-    <!--<CheckBox android:id="@android:id/selectedIcon"
+    <CheckBox android:id="@android:id/selectedIcon"
               android:layout_width="wrap_content"
               android:layout_alignParentRight="true"
               android:focusable="false"
-              android:layout_height="wrap_content"/>-->
+              android:checked="false"
+              android:layout_height="match_parent"
+              android:paddingRight="16dp"/>
 
     <TextView android:id="@android:id/text1"
               android:layout_width="match_parent"
