--- a/app/src/main/res/layout/devices.xml
+++ b/app/src/main/res/layout/devices.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<android.support.design.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/coordinatorLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <ListView
             android:id="@android:id/list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"/>
 
@@ -17,6 +20,18 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="@string/welcome_text"
-            android:gravity="center" android:layout_margin="16dip" android:autoText="false" android:autoLink="email"/>
+            android:gravity="center" android:layout_margin="16dip" android:autoText="false"
+            android:autoLink="email"/>
 
-</RelativeLayout>
+    <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:clickable="true"
+            android:enabled="false"
+            android:src="@android:drawable/ic_menu_search"
+            app:layout_anchor="@android:id/list"
+            app:layout_anchorGravity="bottom|right|end"/>
+
+</android.support.design.widget.CoordinatorLayout>
