--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -4,8 +4,9 @@
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="net.sylvek.itracing2.DevicesActivity"
+        tools:context="net.sylvek.itracing2.devices.DevicesActivity"
         tools:ignore="MergeRootFrame">
+
     <FrameLayout android:id="@+id/container"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"/>
