add attribute labelFor to supress warning 'no label views point to this edit text'

--- a/app/src/main/res/layout/device_alertbox.xml
+++ b/app/src/main/res/layout/device_alertbox.xml
@@ -13,7 +13,8 @@
     <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText" android:layout_gravity="center_horizontal"/>
+            android:id="@+id/editText" android:layout_gravity="center_horizontal"
+        android:labelFor="@+id/editText" />
     <Button
             android:layout_marginTop="16dp"
             android:layout_width="match_parent"
