--- a/app/src/main/res/layout/devices.xml
+++ b/app/src/main/res/layout/devices.xml
@@ -20,7 +20,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="@string/welcome_text"
-            android:gravity="center" android:layout_margin="16dip" android:autoText="false"
+            android:gravity="center" android:layout_margin="16dip"
             android:autoLink="email"/>
 
     <android.support.design.widget.FloatingActionButton
