--- a/app/src/main/res/layout/devices.xml
+++ b/app/src/main/res/layout/devices.xml
@@ -10,7 +10,7 @@
             android:id="@android:id/list"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"/>
 
     <TextView
