--- a/app/src/main/res/layout/expandable_list_item_with_options.xml
+++ b/app/src/main/res/layout/expandable_list_item_with_options.xml
@@ -9,11 +9,11 @@
 
     <CheckBox android:id="@android:id/selectedIcon"
               android:layout_width="wrap_content"
-              android:layout_alignParentRight="true"
+              android:layout_alignParentEnd="true"
               android:focusable="false"
               android:checked="false"
               android:layout_height="match_parent"
-              android:paddingRight="16dp"/>
+              android:paddingEnd="16dp"/>
 
     <TextView android:id="@android:id/text1"
               android:layout_width="match_parent"
