--- a/app/src/main/res/xml/global_preferences.xml
+++ b/app/src/main/res/xml/global_preferences.xml
@@ -3,7 +3,8 @@
     <CheckBoxPreference
             android:key="action_foreground"
             android:title="@string/action_foreground"
-            android:summary="@string/action_foreground_summary"/>
+            android:summary="@string/action_foreground_summary"
+            android:defaultValue="true"/>
     <EditTextPreference
             android:title="@string/double_button_delay"
             android:summary="@string/double_button_delay_summary"
