--- a/app/src/main/res/xml/device_preferences.xml
+++ b/app/src/main/res/xml/device_preferences.xml
@@ -60,6 +60,11 @@
                 android:entryValues="@array/button_actions_values"
                 android:defaultValue="@array/empty_array"/>
         <CheckBoxPreference
+                android:key="action_itracing_bip_out_of_range"
+                android:title="@string/action_bip_out_of_range"
+                android:summary="@string/action_bip_out_of_range_summary"
+                android:defaultValue="true"/>
+        <CheckBoxPreference
                 android:key="action_on_power_off"
                 android:title="@string/action_on_power_off"
                 android:summary="@string/action_on_power_off_summary"/>
