--- a/app/src/main/res/menu/devices.xml
+++ b/app/src/main/res/menu/devices.xml
@@ -10,8 +10,8 @@
             android:title="@string/feedback"
             android:icon="@android:drawable/ic_menu_help"
             android:id="@+id/action_feedback" tools:ignore="AppCompatResource"/>
-    <item
+    <!--item
             android:title="@string/donate"
             android:icon="@android:drawable/ic_menu_more"
-            android:id="@+id/action_donate" tools:ignore="AppCompatResource"/>
+            android:id="@+id/action_donate" tools:ignore="AppCompatResource"/-->
 </menu>
